--- a/data/tabular/qm9/meta.yaml
+++ b/data/tabular/qm9/meta.yaml
@@ -9,22 +9,22 @@ description: |-
 targets:
     - id: rotational_constant_a
       description: Rotational constant A or the moment of inertia of the molecule along its principal axis of rotation
-      units: float
-      type: continuous
+      units: GHz
+      type: float
       names:
           - noun: Rotational constant A
           - noun: moment of inertia along principal axis of rotation
     - id: rotational_constant_b
       description: Rotational constant B or the moment of inertia of the molecule along an axis perpendicular to the principal axis
-      units: float
-      type: continuous
+      units: GHz
+      type: float
       names:
           - noun: Rotational constant B
           - noun: moment of inertia along an axis perpendicular to the principal axis
     - id: rotational_constant_c
       description: Rotational constant C or the moment of inertia of the molecule along an axis perpendicular to the principal axis
-      units: float
-      type: continuous
+      units: GHz
+      type: float
       names:
           - noun: Rotational constant C
           - noun: moment of inertia along the third perpendicular to the principal axis
@@ -49,7 +49,7 @@ targets:
       names:
           - noun: homo
           - noun: HOMO
-          - noun: energy of Highest occupied molecular orbital
+          - noun: highest occupied molecular orbital
     - id: lumo
       description: energy of Lowest unoccupied molecular orbital (LUMO)
       units: Hartree
@@ -57,7 +57,7 @@ targets:
       names:
           - noun: lumo
           - noun: LUMO
-          - noun: energy of Lowest unoccupied molecular orbital
+          - noun: lowest unoccupied molecular orbital
     - id: gap
       description: HOMO-LUMO gap, difference between HOMO and LUMO
       units: Hartree
@@ -148,21 +148,37 @@ bibtex:
       year={2012},
       publisher={ACS Publications}}
 templates:
-    - The molecule with the {smiles__description} representation of {smiles#} has a dipole moment of {dipole_moment#} Debye.
-    - The molecule with the {smiles__description} representation of {smiles#} has an isotropic polarizability of {polarizability#} Bohr^3.
-    - The molecule with the {smiles__description} representation of {smiles#} has an energy of highest occupied molecular orbital {homo#} Hartree.
-    - The molecule with the {smiles__description} representation of {smiles#} has an energy of lowest unoccupied molecular orbital {lumo#} Hartree.
-    - The molecule with the {smiles__description} representation of {smiles#} has a HOMO-LUMO gap of {gap#} Hartree.
-    - The molecule with the {smiles__description} representation of {smiles#} has an electronic spatial extent of {r2#} Bohr^2.
-    - The molecule with the {smiles__description} representation of {smiles#} has a zero point vibrational energy of {zero_point_energy#} Hartree.
-    - The molecule with the {smiles__description} representation of {smiles#} has an internal energy of {u0#} Hartree at 0 K.
-    - The molecule with the {smiles__description} representation of {smiles#} has an internal energy of {u298#} Hartree at at 298.15 K.
-    - The molecule with the {smiles__description} representation of {smiles#} has an enthalpy of {h298#} Hartree at at 298.15 K.
-    - The molecule with the {smiles__description} representation of {smiles#} has a Gibbs free energy of {g298#} Hartree at at 298.15 K.
-    - The molecule with the {smiles__description} representation of {smiles#} has a heat capacity of {heat_capacity#} cal/(mol K) at at 298.15 K.
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {smiles__description} {#representation of |!}{smiles#} has a dipole
+      moment of {dipole_moment#} Debye, {#calculated|simulated!} computationally using {#Density Functional Theory|DFT!} with B3LYP {#exchange correlation
+      functional|functional|accuracy!}.
+    - The {#isotropic polarizability|polarizability|polarizability!} of {#molecule|compound|chemical|molecular species|chemical compound!} with the {smiles__description}
+      {smiles#} is {polarizability#} Bohr^3 calculated using {#Density Functional Theory|DFT!} with B3LYP {#exchange correlation functional|functional|accuracy!}.
+    - The {#molecule|compound|chemical!} with the {smiles__description} {smiles#} has a {rotational_constant_a__names__noun} of {rotational_constant_a#}
+      GHz calculated computationally.
+    - Based on {#Density Functional Theory|DFT!} {#calculation|simulation!} with B3LYP {#exchange correlation functional|functional|accuracy!}, the {#molecule|compound|chemical!}
+      with the {smiles__description} {smiles#} has an energy of highest occupied molecular orbital {homo#} Hartree.
+    - The {lumo__names__noun} {#computed|calculated!} using {#Density Functional Theory|DFT!} {#calculation|simulation!} and B3LYP {#exchange correlation
+      functional|functional|accuracy!} is {lumo#} Hartree.
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} {#described|represented!} by its {smiles__description} {#notation|representation!}
+      {smiles#} possesses a HOMO-LUMO gap measuring {gap#} Hartree as per {#Density Functional Theory|DFT!} results calculated with B3LYP {#exchange correlation
+      functional|functional|accuracy!}.
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {smiles__description} representation of {smiles#} has an electronic
+      spatial extent of {r2#} Bohr^2 computed using {#Density Functional Theory|DFT!}.
+    - The {#molecule|compound|chemical!} with the {smiles__description} {#representation of |!}{smiles#} has a {zero_point_energy__names__noun} of {zero_point_energy#}
+      Hartree when computed using {#Density Functional Theory|DFT!} with B3LYP functional.
+    - As per {#Density Functional Theory|DFT!} {#calculation|simulation!} the {#molecule|compound|chemical|molecular species|chemical compound!} with {smiles__description}
+      {smiles#} has an internal energy of {u0#} Hartree at 0 K.
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} represented in {smiles__description} as {smiles#} has an internal energy of
+      {u298#} Hartree at 298.15 K when calculated using {#Density Functional Theory|DFT!} with B3LYP {#exchange correlation functional|functional|accuracy!}.
+    - The {#molecule|compound|chemical!} with the {smiles__description} representation of {smiles#} when calculated with B3LYP DFT simlulations has an enthalpy
+      of {h298#} Hartree at 298.15 K.
+    - The {smiles__description} {smiles#} {#represents|is from!} a {#molecule|compound|chemical|molecular species|chemical compound!} that has a Gibbs free
+      energy of {g298#} Hartree at 298.15 K, calculated computationally using {#Density Functional Theory|DFT!} with B3LYP {#exchange correlation functional|functional|accuracy!}.
+    - At temperature 298.15 K, the {#Density Functional Theory|DFT!} calculated value of heat capacity is {heat_capacity#} cal/(mol K) for the {#molecule|compound|chemical|molecular
+      species|chemical compound!} with the {smiles__description} {#representation of |!}{smiles#}.
     - |-
-      'Question: What is a molecule with a HOMO-LUMO gap of {gap#} Hartree and an energy of highest occupied molecular orbital {homo#} Hartree?
-      Answer: A molecule with {smiles__description} {smiles#}'
+      'Question: What is a {#molecule|compound|chemical|molecular species|chemical compound!} with a {gap__names__noun} of {gap#} Hartree and an energy of highest occupied molecular orbital {homo#} Hartree?
+      Answer: A {#molecule|compound|chemical|molecular species|chemical compound!} with {smiles__description} {smiles#}'
     - |-
       'Question: What is a molecule with an electronic spatial extent of {r2#} Bohr^2 and an energy of lowest unoccupied molecular orbital {lumo#} Hartree?
       Answer: A molecule with {smiles__description} {smiles#}'
@@ -171,6 +187,6 @@ templates:
       Description: A molecule with a dipole moment of {dipole_moment#} Debye and an isotropic polarizability of {polarizability#} Bohr^3.
       Result: {smiles#}
     - |-
-      Task: Please {#give me|create|generate!} a molecule with the {smiles__description} based on the {#text |!}description{# below|!}.
-      Description: A molecule that has a heat capacity of {heat_capacity#} cal/(mol K) at at 298.15 K and a dipole moment of {dipole_moment#} Debye.
+      Task: Please {#give me|create|generate!} a {#molecule|compound|chemical|molecular species|chemical compound!} with the {smiles__description} based on the {#text |!}description{# below|!}.
+      Description: It has a heat capacity of {heat_capacity#} cal/(mol K) at 298.15 K and a dipole moment of {dipole_moment#} Debye.
       Result: {smiles#}
