--- a/data/drugchat_liang_zhang_et_al/meta.yaml
+++ b/data/drugchat_liang_zhang_et_al/meta.yaml
@@ -32,3 +32,26 @@ bibtex:
       month = "5",
       url = "https://www.techrxiv.org/articles/preprint/DrugChat_Towards_Enabling_ChatGPT-Like_Capabilities_on_Drug_Molecule_Graphs/22945922",
       doi = "10.36227/techrxiv.22945922.v1"}
+templates:  
+  - |-
+    Task: Please answer the following question about the the molecule with {smiles__description} {SMILES#}.
+    {#Description|Question|Request!}: {Question#}
+    {#Result|Answer|Completion!}: {Answer#}
+  - |-
+    {#Question|Q!}: {Question#}
+    {#Constraint:|Description:|!} The {#Molecule|Compound|Chemical!} has {SMILE_description} {SMILES#}.
+    {#Answer|Result|Answer!}: {Answer#}
+  - |-
+    User: I have a question about the {#molecule|chemical|compound} with {smiles__description} {SMILES#}.
+    Assistant: {#Sure, what is your question?|How can I help?|That sounds interesting, how can I help?|Interesting, how can I help?!}
+    User: {Question#}
+    Assistant: {#The answer is|!}{Answer#}
+  - |-
+    User: I want to know more about the {#molecule|chemical|compound} with {smiles__description} {SMILES#}.
+    Assistant: {#Sure, what is your question?|How can I help?|That sounds interesting, how can I help?|Interesting, how can I help?!}
+    User: {Question#}
+    Assistant: {#The answer is|!}{Answer#}
+  - |-
+    Task: Answer the following question about the molecule with {smiles__description} {SMILES#}.
+    {#Description|Question|Request!}: {Question#}
+    {#Result|Answer|Completion!}: {Answer#}
