--- a/data/tabular/melting_points/meta.yaml
+++ b/data/tabular/melting_points/meta.yaml
@@ -6,14 +6,14 @@ targets:
     - id: mp
       description: mean melting point
       units: deg C
-      type: float
+      type: continous
       names:
           - noun: mean melting point
       uris:
     - id: mp_range
       description: melting point range
       units: deg C
-      type: float
+      type: continous
       names:
           - noun: melting point range
 benchmarks: []
