--- a/data/tabular/RedDB/meta.yaml
+++ b/data/tabular/RedDB/meta.yaml
@@ -184,17 +184,17 @@ templates:
       of {optGasLumo#} {optGasLumo__units}.
     - |-
       Task: Please {#give me|create|generate!} a {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} based on the {#text |!}description{# below|!}.
-            Description: It has a {solubilityAqSolPred__names__noun} {solubilityAqSolPred#} {solubilityAqSolPred__units} {cavityEnergy__names__noun} of {cavityEnergy#} {cavityEnergy__units}.
+            Description: It has an {solubilityAqSolPred__names__noun} {solubilityAqSolPred#} {solubilityAqSolPred__units} and a {cavityEnergy__names__noun} of {cavityEnergy#} {cavityEnergy__units}.
             Result: {SMILES#}
     - |-
       Task: Please {#give me|create|generate!} a {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} based on the {#text |!}description{# below|!}.
-            Description: It has a  {solubilityAqSolPred__names__noun} {solubilityAqSolPred#} {solubilityAqSolPred__units} {cavityEnergy__names__noun} of {cavityEnergy#} {cavityEnergy__units}.
+            Description: It has an {solubilityAqSolPred__names__noun} {solubilityAqSolPred#} {solubilityAqSolPred__units} and a {cavityEnergy__names__noun} of {cavityEnergy#} {cavityEnergy__units}.
             Result: {InChI#}
     - |-
       Task: Please {#give me|create|generate!} a {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} based on the {#text |!}description{# below|!}.
-            Description: It has a  {solutionLumo__names__noun} {solutionLumo#} {solutionLumo__units} {solutionHomo__names__noun} of {solutionHomo#} {solutionHomo__units}.
+            Description: It has a  {solutionLumo__names__noun} {solutionLumo#} {solutionLumo__units} and a {solutionHomo__names__noun} of {solutionHomo#} {solutionHomo__units}.
             Result: {SMILES#}
     - |-
       Task: Please {#give me|create|generate!} a {#molecule|compound|chemical|molecular species|chemical compound!} with the {InChI__description} based on the {#text |!}description{# below|!}.
-            Description: It has a  {solutionLumo__names__noun} {solutionLumo#} {solutionLumo__units} {solutionHomo__names__noun} of {solutionHomo#} {solutionHomo__units}.
+            Description: It has a  {solutionLumo__names__noun} {solutionLumo#} {solutionLumo__units} and a {solutionHomo__names__noun} of {solutionHomo#} {solutionHomo__units}.
             Result: {InChI#}
