feat: add level of theory

--- a/data/tabular/RedDB/meta.yaml
+++ b/data/tabular/RedDB/meta.yaml
@@ -1,7 +1,7 @@
 ---
 name: RedDB
 description: |-
-    RedDB: a computational database that contains 31,618 molecules
+    RedDB: a computational database that contains 30861 molecules
     from two prominent classes of organic electroactive compounds, quinones and aza-aromatics,
     has been presented. RedDB incorporates miscellaneous physicochemical property information
     of the compounds that can potentially be employed as battery performance descriptors.
@@ -40,67 +40,68 @@ targets:
       units: kT
       type: numeric
       names:
-          - noun: cavity formation energy
+          - noun: cavity formation energy at the PBE level of theory
     - id: gasEnergy
       description: Total energy of a molecule in the gas phase
       units: Hartree
       type: numeric
       names:
-          - noun: gas-phase molecular energy
+          - noun: gas-phase molecular energy at the PBE level of theory
     - id: gasHomo
       description: Highest Occupied Molecular Orbital (HOMO) energy of a gas-phase molecule
       units: Hartree
       type: numeric
       names:
-          - noun: gaseous phase HOMO energy
+          - noun: gaseous phase HOMO energy at the PBE level of theory
     - id: gasLumo
       description: Lowest Unoccupied Molecular Orbital (LUMO) energy of a gas-phase molecule
       units: Hartree
       type: numeric
       names:
-          - noun: gaseous phase LUMO energy
+          - noun: gaseous phase LUMO energy at the PBE level of theory
     - id: solutionEnergy
       description: Total energy of a molecule in a solution
       units: Hartree
       type: numeric
       names:
-          - noun: aqueous phase molecular energy
+          - noun: aqueous phase molecular energy at the PBE level of theory
     - id: solutionHomo
       description: Highest Occupied Molecular Orbital (HOMO) energy in a solution
       units: Hartree
       type: numeric
       names:
-          - noun: aqueous phase HOMO energy
+          - noun: aqueous phase HOMO energy at the PBE level of theory
     - id: solutionLumo
       description: Lowest Unoccupied Molecular Orbital (LUMO) energy in a solution
       units: Hartree
       type: numeric
       names:
-          - noun: aqueous phase LUMO energy
+          - noun: aqueous phase LUMO energy at the PBE level of theory
     - id: nuclearRepulsionEnergy
       description: Electrostatic repulsion energy between atomic nuclei in a molecule
       units: Hartree
       type: numeric
       names:
-          - noun: nuclear repulsion energy
+          - noun: nuclear repulsion energy at the PBE level of theory
     - id: optGasEnergy
       description: Total energy of an optimized gas-phase molecule
       units: Hartree
       type: numeric
       names:
-          - noun: optimized gas-phase molecular energy
+          - noun: optimized gas-phase molecular energy at the PBE level of theory
     - id: optGasHomo
       description: Highest Occupied Molecular Orbital (HOMO) energy of an optimized gas-phase molecule
       units: Hartree
       type: numeric
       names:
-          - noun: optimized gas-phase HOMO energy
+          - noun: optimized gas-phase HOMO energy at the PBE level of theory
     - id: optGasLumo
       description: Lowest Unoccupied Molecular Orbital (LUMO) energy of an optimized gas-phase molecule
       units: Hartree
       type: numeric
       names:
-          - noun: optimized gas-phase LUMO energy
+          - noun: optimized gas-phase LUMO energy calculated at the PBE level of theory
+          - noun: optimized gas-phase LUMO energy calculated with DFT at the PBE level of theory
 identifiers:
     - id: SMILES
       type: SMILES
