data type from numeric -> continous

--- a/data/tabular/RedDB/meta.yaml
+++ b/data/tabular/RedDB/meta.yaml
@@ -14,91 +14,91 @@ targets:
     - id: solubilityAqSolPred
       description: Aqueous solubility prediction using machine learning
       units: logS
-      type: numeric
+      type: continous
       names:
           - noun: ML-predicted aqueous solubility
     - id: molecularSurface
       description: Total surface area of a molecule
       units: \AA^2
-      type: numeric
+      type: continous
       names:
           - noun: molecular surface area
     - id: reactionFieldEnergy
       description: Energy associated with the interaction during a chemical reaction
       units: kT
-      type: numeric
+      type: continous
       names:
           - noun: chemical reaction field energy
     - id: solventAccessSurface
       description: Surface area of a molecule accessible to a solvent
       units: \AA^2
-      type: numeric
+      type: continous
       names:
           - noun: solvent-accessible surface area
     - id: cavityEnergy
       description: Energy associated with the formation of cavities in a molecular structure
       units: kT
-      type: numeric
+      type: continous
       names:
           - noun: cavity formation energy at the PBE level of theory
     - id: gasEnergy
       description: Total energy of a molecule in the gas phase
       units: Hartree
-      type: numeric
+      type: continous
       names:
           - noun: gas-phase molecular energy at the PBE level of theory
     - id: gasHomo
       description: Highest Occupied Molecular Orbital (HOMO) energy of a gas-phase molecule
       units: Hartree
-      type: numeric
+      type: continous
       names:
           - noun: gaseous phase HOMO energy at the PBE level of theory
     - id: gasLumo
       description: Lowest Unoccupied Molecular Orbital (LUMO) energy of a gas-phase molecule
       units: Hartree
-      type: numeric
+      type: continous
       names:
           - noun: gaseous phase LUMO energy at the PBE level of theory
     - id: solutionEnergy
       description: Total energy of a molecule in a solution
       units: Hartree
-      type: numeric
+      type: continous
       names:
           - noun: aqueous phase molecular energy at the PBE level of theory
     - id: solutionHomo
       description: Highest Occupied Molecular Orbital (HOMO) energy in a solution
       units: Hartree
-      type: numeric
+      type: continous
       names:
           - noun: aqueous phase HOMO energy at the PBE level of theory
     - id: solutionLumo
       description: Lowest Unoccupied Molecular Orbital (LUMO) energy in a solution
       units: Hartree
-      type: numeric
+      type: continous
       names:
           - noun: aqueous phase LUMO energy at the PBE level of theory
     - id: nuclearRepulsionEnergy
       description: Electrostatic repulsion energy between atomic nuclei in a molecule
       units: Hartree
-      type: numeric
+      type: continous
       names:
           - noun: nuclear repulsion energy at the PBE level of theory
     - id: optGasEnergy
       description: Total energy of an optimized gas-phase molecule
       units: Hartree
-      type: numeric
+      type: continous
       names:
           - noun: optimized gas-phase molecular energy at the PBE level of theory
     - id: optGasHomo
       description: Highest Occupied Molecular Orbital (HOMO) energy of an optimized gas-phase molecule
       units: Hartree
-      type: numeric
+      type: continous
       names:
           - noun: optimized gas-phase HOMO energy at the PBE level of theory
     - id: optGasLumo
       description: Lowest Unoccupied Molecular Orbital (LUMO) energy of an optimized gas-phase molecule
       units: Hartree
-      type: numeric
+      type: continous
       names:
           - noun: optimized gas-phase LUMO energy calculated at the PBE level of theory
           - noun: optimized gas-phase LUMO energy calculated with DFT at the PBE level of theory
